# pl-download

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  chris_plugin_info_ds.json  chris_plugin_info_fs.json
.github/workflows/: ci.yml
src/: main.rs
