[package]
name = "download"
description = "URI downloader ChRIS plugin"
version = "1.0.0"
edition = "2024"

[dependencies]
async-walkdir = "2.1.0"
camino = "1.1.10"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
fs-err = { version = "3.1.1", features = ["tokio"] }
futures = "0.3.31"
pathdiff = { version = "0.2.3", features = ["camino"] }
tokio = "1.45.1"
trauma = { version = "2", default-features = false, features = ["rustls"] }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"
